# roboptim-core-plugin-nag

./: .clang-format  .travis.yml  CMakeLists.txt
doxygen/HEAD/: a00001.html  a00001.js  a00002.html  a00002.js  a00003.html  a00003.js  a00004.html  a00004.js  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00013.js  a00014.html  a00014.js  a00015.html  a00015.js  a00016.html  a00016.js  a00016.map  a00016.md5  a00017.html  a00017.js  a00017.md5  a00018.html  a00018.js  a00018.map  (+61 more)
doxygen/HEAD/search/: all_63.js  all_64.js  all_66.js  all_67.js  all_69.js  all_6c.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_75.js  all_76.js  all_7e.js  classes_6e.js  classes_73.js  defines_64.js  enums_63.js  enumvalues_6c.js  enumvalues_6e.js  files_6e.js  functions_63.js  functions_64.js  functions_65.js  functions_67.js  functions_6e.js  functions_6f.js  functions_70.js  functions_73.js  functions_75.js  functions_7e.js  namespaces_72.js  search.js  typedefs_61.js  typedefs_64.js  typedefs_67.js  typedefs_6a.js  typedefs_6c.js  typedefs_6e.js  typedefs_70.js  (+4 more)
include/roboptim/core/plugin/nag/: nag-common.hh  nag-common.hxx  nag-differentiable.hh  nag-nlp-sparse.hh  nag-nlp.hh  nag-parameters-updater.hh  nag-simplex.hh  nag.hh
src/: CMakeLists.txt  nag-differentiable.cc  nag-nlp-sparse.cc  nag-nlp.cc  nag-simplex.cc  nag.cc
tests/: CMakeLists.txt  plugin.cc
